# plausibility-vaccine

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run_analytics.sh  run_plausibility_vaccine.sh
.github/workflows/: testing.yml
artifacts/dataset_statistics/: Mobility_data_statistics.txt  Opacity_data_statistics.txt  Phase_data_statistics.txt  Rigidity_data_statistics.txt  Sentience_data_statistics.txt  Shape_data_statistics.txt  Size_data_statistics.txt  Temperature_data_statistics.txt  Texture_data_statistics.txt  Weight_data_statistics.txt  plausibility_data_statistics.txt  selectional_association_object_data_statistics.txt  selectional_association_subject_data_statistics.txt
artifacts/word_sense_statistics/: object_word_sense_dist.txt  subject_word_sense_dist.txt
config/: base.yaml  baselines.yaml  combined.yaml  combined_80_20.yaml  endlines.yaml  pretraining.yaml
config/albert_reduce_factor_16/: base.yaml  baselines.yaml  endlines.yaml  pretraining.yaml
config/albert_reduce_factor_32/: base.yaml  endlines.yaml  pretraining.yaml
config/albert_reduce_factor_64/: base.yaml  baselines.yaml  endlines.yaml  pretraining.yaml
config/bert_reduce_factor_16/: base.yaml  baselines.yaml  endlines.yaml  pretraining.yaml
config/bert_reduce_factor_32/: baselines.yaml  pretraining.yaml
config/bert_reduce_factor_64/: base.yaml  baselines.yaml  endlines.yaml  pretraining.yaml
config/roberta_reduce_factor_16/: base.yaml  baselines.yaml  endlines.yaml  pretraining.yaml
config/roberta_reduce_factor_32/: base.yaml  baselines.yaml  pretraining.yaml
config/roberta_reduce_factor_64/: base.yaml  baselines.yaml  endlines.yaml  pretraining.yaml
data/: items.xlsx
data/property_data/: README.md  (+1 more)
plausibility_vaccine/: adapter.py  data.py  fine_tune.py  kl_diverge.py  main.py  run.py  train.py  util.py
scripts/: aggregate_performance_results.py  analyze_attention_weights.py  combine_data.py  combined_80_20.py  generate_grouped_analytics_dataset.py  generate_property_data.py  generate_selectional_association_data.py  generate_svo_probes.py  run_adapter_ablation.py  run_data_analysis.py  run_downstream_performance_analysis.py  run_mispredictions_analysis.py  run_performance_aggregation.py  run_pretraining_performance_analysis.py  run_property_plausibility_mutual_info.py  run_selectional_association_plausibility_correlation.py  run_transformer_ablation.py  run_word_sense_analysis.py
test/: test_main.py
(+69 files in other folders)
