[project]
name = "plausibility-vaccine"
version = "0.1.0"
description = "Injecting LLM Knowledge for Event Plausibility"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Jacob Chmura", email = "jacobpaul.chmura@gmail.com" },
]
dependencies = [
    "accelerate>=1.1.1",
    "adapters>=1.0.1",
    "datasets>=3.1.0",
    "evaluate>=0.4.3",
    "numpy>=2.0.2",
    "scikit-learn>=1.5.2",
    "torch>=2.5.1",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "types-pyyaml>=6.0.12.20240917",
]
verb-data-generation = [
    "pandas>=2.2.3",
]
analytics = [
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
]

[tool.mypy]
files = ["plausibility_vaccine"]
install_types = true
non_interactive = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
skip = [".gitignore", "__init__.py"]

[tool.ruff]
src = ["plausibility_vaccine"]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
]
ignore = [
    "D100",  # Ignore "Missing docstring in public module"
    "D101",  # Ignore "Missing docstring in public class"
    "D102",  # Ignore "Missing docstring in public method"
    "D103",  # Ignore "Missing docstring in public function"
    "D104",  # Ignore "Missing docstring in public package"
    "D105",  # Ignore "Missing docstring in magic method"
    "D107",  # Ignore "Missing docstring in __init__"
    "D205",  # Ignore "blank line required between summary line and description"
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = [
    "--capture=no",
    "--color=yes",
    "-vvv",
]

[tool.coverage.run]
source = ["plausibility_vaccine"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pass",
    "raise NotImplementedError",
    "register_parameter",
    "torch.cuda.is_available",
]
